# EasyTSAD

./: .gitignore  README.md  pyproject.toml
Mkdocs/docs/: start.md
TSCDD/: Summary.py  utils.py
TSCDD/Config/: Config.py  DataConfig.py  EvalConfig.py  ExpSchemaConfig.py  GlobalConfig.py  MethodHyperParamConfig.py  PathConfig.py  PathManager.py  TestSchemaConfig.py  VisConfig.py  __init__.py
TSCDD/Config/Options/: EvalLoadOption.py  ExpSchemaOptions.py  TestSchemaOptions.py  VisualizationOption.py  __init__.py
TSCDD/Controller/: Controller4CD.py  __init__.py
TSCDD/DataFactory/: DataStore.py  ObjectView.py  TSData.py
TSCDD/DataFactory/LabelStore/: Label.py  LabelStore.py  LabelTools.py  LabelType.py  __init__.py
TSCDD/DataFactory/TimeSeries/: TimeSeries.py  __init__.py
TSCDD/Evaluations/: EvalInterface.py  Evaluator.py  MetricInterface.py  Metrics.py  Performance.py  __init__.py
TSCDD/Evaluations/EvalPreprocess/: EvalPreprocess.py  __init__.py
TSCDD/Evaluations/Protocols/: EventDetect.py  EventF1PA.py  EventKthF1PA.py  EventKthPrcPA.py  EventKthRocPA.py  EventPrcPA.py  EventRocPA.py  PointAuprcPA.py  PointAurocPA.py  PointF1.py  PointF1PA.py  PointKthF1PA.py  PointPrc.py  PointRoc.py  VUS.py
TSCDD/Methods/: BaseMethods.py  OnlineMethodWrapper.py  __init__.py
TSCDD/Methods/ConceptDriftDetection/: .gitignore  __init__.py  (+1 more)
TSCDD/Schema/: TestResultLoader.py
TSCDD/Visualization/: Visualizer.py
playground/: default_config.json  offline_config.json  online_config.json  summary.csv  summary.pkl  summary_expand.csv  summary_expand.pkl  test_config.json
(+83 files in other folders)
